# elliptic-fourier-descriptors-manipulator

./: .gitignore  README.md  pc_node.cpp
pc_package/: CMakeLists.txt
rosenv/src/efd_pkg/: package.xml  setup.cfg  setup.py
rosenv/src/efd_pkg/efd_pkg/: efd_node.py  elliptic_fourier_descriptors.py
rosenv/src/grasp_planning/: package.xml  setup.py
rosenv/src/grasp_planning/grasp_planning/: curvature_grasp.py  grasp_planning.py
rosenv/src/interfaces/: CMakeLists.txt  package.xml
rosenv/src/interfaces/srv/: ComputePointEFD.srv
rosenv/src/pc_package/: package.xml
rosenv/src/pc_package/src/: pc_node.cpp  pcd_publisher_node.py
rosenv/src/pc_py/: package.xml  setup.cfg  setup.py
rosenv/src/vbm_project_env/scripts/: efd_test.py
rosenv/src/vbm_project_env/worlds/: simulation.world
